--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-react-hw-02-feedback",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Ex0rc1st/goit-react-hw-02-feedback",
+  "homepage": "https://ex0rc1st.github.io/goit-react-hw-02-feedback/",
   "dependencies": {
     "@emotion/styled": "^11.10.4",
     "@testing-library/jest-dom": "^5.16.3",
